--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@react-three/drei": "^9.66.0",
+        "@react-three/fiber": "^8.12.2",
         "@reduxjs/toolkit": "^1.9.5",
+        "@types/three": "^0.150.2",
         "framer-motion": "^10.12.4",
+        "maath": "^0.5.3",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.2.7",
         "react": "^18.2.0",
+        "react-color": "^2.19.3",
         "react-dom": "^18.2.0",
-        "react-redux": "^8.0.5"
+        "react-redux": "^8.0.5",
+        "three": "^0.151.3"
     },
     "devDependencies": {
         "@types/react": "^18.0.28",
