--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "@reduxjs/toolkit": "^1.9.5",
         "@types/three": "^0.150.2",
         "framer-motion": "^10.12.4",
+        "gltfjsx": "^6.1.4",
         "maath": "^0.5.3",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.2.7",
