--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc && node dist/index.js",
+        "build": "tsc",
         "dev": "tsc && cd ./dist && nodemon index.js"
     },
     "keywords": [],
