--- a/server/package.json
+++ b/server/package.json
@@ -5,17 +5,11 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc",
-        "dev": "tsc && nodemon dist/index.js"
+        "build": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "devDependencies": {
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.17",
-        "typescript": "^5.0.4"
-    },
     "dependencies": {
         "cloudinary": "^1.36.2",
         "cors": "^2.8.5",
