--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "build": "nodemon index.js"
+        "start": "nodemon index.js"
     },
     "keywords": [],
     "author": "",
